syntax = "proto3";

import "google/protobuf/timestamp.proto";

package latency;

service LatencyService {
  rpc SendMessage (MessageInfo) returns (MessageResponse);
  rpc StreamLatency (stream MessageInfo) returns (stream MessageResponse);

}

message MessageInfo {
  string id = 1;
  string sentContent = 2;
  google.protobuf.Timestamp sentAt = 3;
}

message MessageResponse {
  string id = 1;
  string sentContent = 2;
  google.protobuf.Timestamp sentAt = 3;
  google.protobuf.Timestamp receivedAt = 4;
}
